94. Binary Tree Inorder Traversal Improved: using boolean variable instead of traversing List to check if currentNode came from stack.pop() (so no need to do left traverse if currentNode came from stack.pop()) CPU: 100% Runtime 0ms Memory: 40.9 MB 23.53%
https://leetcode.com/problems/binary-tree-inorder-traversal/submissions/909290779/